<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/activity2_text"
        android:id="@+id/textView"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_button1"
            android:id="@+id/button"
            android:layout_gravity="left"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_button2"
            android:id="@+id/button2"
            android:layout_gravity="right"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>